--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bitcoin = { version = "0.31.0", features = ["rand"] }
 bitcoincore-rpc = { version = "0.18.0" }
