--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 bitcoin = { version = "0.31.0", features = ["rand"] }
 bitcoincore-rpc = { version = "0.18.0" }
+rand = "0.8"
